--- a/Big Data/Recitation/BDP_SQL_exercise.ipynb
+++ b/Big Data/Recitation/BDP_SQL_exercise.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "8f0d44df-9cd3-47d5-a863-8ac5b23bbf45",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "9e54fd4a-35e0-4c6f-9f81-0cd60b1d4ae8",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "49f0650d-ff97-414f-8536-1d53e75a0189",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "935a2bf0-068f-40c5-ac36-ede6a2a9177d",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "id": "530032c8-3aad-4c62-a059-2e62de29cd96",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,6 @@
        "      <th>fare</th>\n",
        "      <th>cabin</th>\n",
        "      <th>embarked</th>\n",
-       "      <th>survived</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -245,7 +244,6 @@
        "      <td>7.2500</td>\n",
        "      <td>None</td>\n",
        "      <td>S</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -260,7 +258,6 @@
        "      <td>71.2833</td>\n",
        "      <td>C85</td>\n",
        "      <td>C</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -275,7 +272,6 @@
        "      <td>7.9250</td>\n",
        "      <td>None</td>\n",
        "      <td>S</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -290,7 +286,6 @@
        "      <td>53.1000</td>\n",
        "      <td>C123</td>\n",
        "      <td>S</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -305,11 +300,9 @@
        "      <td>8.0500</td>\n",
        "      <td>None</td>\n",
        "      <td>S</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -335,7 +328,6 @@
        "      <td>13.0000</td>\n",
        "      <td>None</td>\n",
        "      <td>S</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>887</th>\n",
@@ -350,7 +342,6 @@
        "      <td>30.0000</td>\n",
        "      <td>B42</td>\n",
        "      <td>S</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>888</th>\n",
@@ -365,7 +356,6 @@
        "      <td>23.4500</td>\n",
        "      <td>None</td>\n",
        "      <td>S</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>889</th>\n",
@@ -380,7 +370,6 @@
        "      <td>30.0000</td>\n",
        "      <td>C148</td>\n",
        "      <td>C</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>890</th>\n",
@@ -395,11 +384,10 @@
        "      <td>7.7500</td>\n",
        "      <td>None</td>\n",
        "      <td>Q</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>891 rows × 12 columns</p>\n",
+       "<p>891 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -416,36 +404,23 @@
        "889          890       1                              Behr, Mr. Karl Howell   \n",
        "890          891       3                                Dooley, Mr. Patrick   \n",
        "\n",
-       "        sex   age  sibsp  parch            ticket     fare cabin embarked  \\\n",
-       "0      male  22.0      1      0         A/5 21171   7.2500  None        S   \n",
-       "1    female  38.0      1      0          PC 17599  71.2833   C85        C   \n",
-       "2    female  26.0      0      0  STON/O2. 3101282   7.9250  None        S   \n",
-       "3    female  35.0      1      0            113803  53.1000  C123        S   \n",
-       "4      male  35.0      0      0            373450   8.0500  None        S   \n",
-       "..      ...   ...    ...    ...               ...      ...   ...      ...   \n",
-       "886    male  27.0      0      0            211536  13.0000  None        S   \n",
-       "887  female  19.0      0      0            112053  30.0000   B42        S   \n",
-       "888  female   NaN      1      2        W./C. 6607  23.4500  None        S   \n",
-       "889    male  26.0      0      0            111369  30.0000  C148        C   \n",
-       "890    male  32.0      0      0            370376   7.7500  None        Q   \n",
+       "        sex   age  sibsp  parch            ticket     fare cabin embarked  \n",
+       "0      male  22.0      1      0         A/5 21171   7.2500  None        S  \n",
+       "1    female  38.0      1      0          PC 17599  71.2833   C85        C  \n",
+       "2    female  26.0      0      0  STON/O2. 3101282   7.9250  None        S  \n",
+       "3    female  35.0      1      0            113803  53.1000  C123        S  \n",
+       "4      male  35.0      0      0            373450   8.0500  None        S  \n",
+       "..      ...   ...    ...    ...               ...      ...   ...      ...  \n",
+       "886    male  27.0      0      0            211536  13.0000  None        S  \n",
+       "887  female  19.0      0      0            112053  30.0000   B42        S  \n",
+       "888  female   NaN      1      2        W./C. 6607  23.4500  None        S  \n",
+       "889    male  26.0      0      0            111369  30.0000  C148        C  \n",
+       "890    male  32.0      0      0            370376   7.7500  None        Q  \n",
        "\n",
-       "     survived  \n",
-       "0           0  \n",
-       "1           1  \n",
-       "2           1  \n",
-       "3           1  \n",
-       "4           0  \n",
-       "..        ...  \n",
-       "886         0  \n",
-       "887         1  \n",
-       "888         0  \n",
-       "889         1  \n",
-       "890         0  \n",
-       "\n",
-       "[891 rows x 12 columns]"
+       "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "85ea2ee0-1353-45b7-82c0-03767ed2bb02",
    "metadata": {},
    "outputs": [
@@ -580,7 +555,7 @@
        "4          200+                20"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "ab016bf1-cc18-4d0f-b626-0bc6ad5d2210",
    "metadata": {},
    "outputs": [
@@ -774,7 +749,7 @@
        "10                      Duane, Mr. Frank       3  65.0     3"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 44,
    "id": "dbf9e24a-a588-4b66-8af2-960c55f7201e",
    "metadata": {},
    "outputs": [
@@ -1013,7 +988,7 @@
        "0  0.786756"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,8 +1008,98 @@
     "SELECT AVG(y_true = y_pred) AS accuracy\n",
     "FROM raw_data\n",
     "\"\"\"\n",
-    "acc = 0.786756\n",
     "\n",
+    "pd.read_sql_query(query, con=con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ebc00683",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.786756</td>\n",
+       "      <td>0.742038</td>\n",
+       "      <td>0.681287</td>\n",
+       "      <td>0.710366</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   accuracy  precision    recall  f1_score\n",
+       "0  0.786756   0.742038  0.681287  0.710366"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "\n",
+    "WITH raw_data AS (\n",
+    "    SELECT CASE WHEN sex = 'male' THEN 0 ELSE 1 END AS y_pred\n",
+    "        , survived AS y_true\n",
+    "    FROM titanic_features\n",
+    "        JOIN titanic_labels\n",
+    "            USING(passengerid)\n",
+    "    ),\n",
+    "\n",
+    "confusion_matrix AS (\n",
+    "    SELECT\n",
+    "        CAST(COUNT(CASE WHEN y_pred = 0 AND y_true = 1 then 1 end) AS FLOAT) as false_neg,\n",
+    "        CAST(COUNT(CASE WHEN y_pred = 0 AND y_true = 0 then 1 end) AS FLOAT) as true_neg,\n",
+    "        CAST(COUNT(CASE WHEN y_pred = 1 AND y_true = 0 then 1 end) AS FLOAT) as false_pos,\n",
+    "        CAST(COUNT(CASE WHEN y_pred = 1 AND y_true = 1 then 1 end) AS FLOAT) as true_pos,\n",
+    "        COUNT(*) as count\n",
+    "    FROM raw_data\n",
+    "),\n",
+    "\n",
+    "evaluation_metrics AS (\n",
+    "SELECT (true_pos + true_neg) / count AS accuracy,\n",
+    "    true_pos / (true_pos + false_pos) as precision,\n",
+    "    true_pos / (true_pos + false_neg) as recall\n",
+    "FROM confusion_matrix\n",
+    ")\n",
+    "\n",
+    "SELECT accuracy, precision, recall,\n",
+    "    2 * (precision * recall) / (precision + recall) as f1_score\n",
+    "FROM evaluation_metrics\n",
+    "\n",
+    "\"\"\"\n",
     "pd.read_sql_query(query, con=con)"
    ]
   },
@@ -1102,83 +1167,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "ebc00683",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>(true_pos + true_neg) / count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   (true_pos + true_neg) / count\n",
-       "0                              0"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "query = \"\"\"\n",
-    "\n",
-    "WITH raw_data AS (\n",
-    "    SELECT CASE WHEN sex = 'male' THEN 0 ELSE 1 END AS y_pred\n",
-    "        , survived AS y_true\n",
-    "    FROM titanic_features\n",
-    "        JOIN titanic_labels\n",
-    "            USING(passengerid)\n",
-    "    ),\n",
-    "\n",
-    "confusion_matrix AS (\n",
-    "    SELECT\n",
-    "        COUNT(CASE WHEN y_pred = 0 AND y_true = 1 then 1 end) as false_neg,\n",
-    "        COUNT(CASE WHEN y_pred = 0 AND y_true = 0 then 1 end) as true_neg,\n",
-    "        COUNT(CASE WHEN y_pred = 1 AND y_true = 0 then 1 end) as false_pos,\n",
-    "        COUNT(CASE WHEN y_pred = 1 AND y_true = 1 then 1 end) as true_pos,\n",
-    "        COUNT(*) as count\n",
-    "    FROM raw_data\n",
-    ")\n",
-    "\n",
-    "SELECT (true_pos + true_neg) / count\n",
-    "FROM confusion_matrix\n",
-    "\n",
-    "\"\"\"\n",
-    "pd.read_sql_query(query, con=con)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "58f52c73-b168-4384-ab9e-a29cfbc2bb48",
    "metadata": {},
@@ -1207,20 +1195,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "id": "17c92a18-b9b8-40f7-8ee5-59cc94b94a8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fare_aggregates(columns: list, agg: str) -> pd.DataFrame:\n",
+    "def fare_aggregates(columns=[], agg=\"avg\") -> pd.DataFrame:\n",
     "    \n",
-    "    query = \"\"\"\n",
+    "    column_names = \" \".join(column + \",\" for column in columns) if columns else \"\"\n",
+    "    group_by_command = \"GROUP BY \" + column_names[:-1] if columns else \"\"\n",
+    "\n",
+    "    query = f\"\"\"\n",
     "\n",
     "    -- YOUR QUERY\n",
+    "    SELECT {column_names} {agg}(fare) as {agg}_fare\n",
+    "    FROM titanic_features\n",
+    "    {group_by_command}\n",
     "    \n",
     "    \"\"\"\n",
     "\n",
     "    return pd.read_sql_query(query, con=con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "9df2c23a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    avg_fare\n",
+      "0  32.204208\n",
+      "     sum_fare\n",
+      "0  28693.9493\n",
+      "      sex  pclass    avg_fare\n",
+      "0  female       1  106.125798\n",
+      "1  female       2   21.970121\n",
+      "2  female       3   16.118810\n",
+      "3    male       1   67.226127\n",
+      "4    male       2   19.741782\n",
+      "5    male       3   12.661633\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fare_aggregates())\n",
+    "print(fare_aggregates(agg='sum'))\n",
+    "print(fare_aggregates(columns=['sex', 'pclass']))"
    ]
   },
   {
@@ -1470,7 +1494,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1485,6 +1509,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
