Sync lecture files and old exercises

--- a/Big Data/Recitation/BDP_SQL_exercise.ipynb
+++ b/Big Data/Recitation/BDP_SQL_exercise.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8f0d44df-9cd3-47d5-a863-8ac5b23bbf45",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9e54fd4a-35e0-4c6f-9f81-0cd60b1d4ae8",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "49f0650d-ff97-414f-8536-1d53e75a0189",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "935a2bf0-068f-40c5-ac36-ede6a2a9177d",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "530032c8-3aad-4c62-a059-2e62de29cd96",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "dbf9e24a-a588-4b66-8af2-960c55f7201e",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.786756</td>\n",
+       "      <td>0.782267</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -985,10 +985,10 @@
       ],
       "text/plain": [
        "   accuracy\n",
-       "0  0.786756"
+       "0  0.782267"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +997,7 @@
     "query = \"\"\"\n",
     "\n",
     "WITH raw_data AS (\n",
-    "    SELECT CASE WHEN sex = 'male' THEN 0 ELSE 1 END AS y_pred\n",
+    "    SELECT CASE WHEN (sex = 'male' AND age >= 12) OR pclass NOT IN (1, 2) THEN 0 ELSE 1 END AS y_pred\n",
     "        , survived AS y_true\n",
     "    FROM titanic_features\n",
     "        JOIN titanic_labels\n",
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "ebc00683",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
        "0  0.786756   0.742038  0.681287  0.710366"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 (default, Jun 29 2021, 05:25:02) \n[Clang 12.0.5 (clang-1205.0.22.9)]"
   },
   "vscode": {
    "interpreter": {
